fix: harden pilot inventory operations and access control